--- a/action.yml
+++ b/action.yml
@@ -2,10 +2,13 @@ name: 'Your name here'
 description: 'Provide a description here'
 author: 'Your name or organization here'
 inputs:
-  milliseconds: # change this
+  haystack: # change this
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: 'The string in which to search for matches'
+  needle:
+    required: false
+    default: '/[A-Z]+-\d+/gmi'
+    description: 'The regex that is used to find matches in `heaystack`'
 runs:
   using: 'node16'
   main: 'dist/index.js'
