--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "node",
     "setup"
   ],
-  "author": "",
+  "author": "Paul Schuberth",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.0"
