--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-action",
+  "name": "regex-extract-action",
   "version": "0.0.0",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "GitHub Action to extract matches of a given regex from the input",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -15,12 +15,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/paulschuberth/regex-extract-action.git"
   },
   "keywords": [
     "actions",
     "node",
-    "setup"
+    "regex",
+    "finder",
+    "extraction"
   ],
   "author": "Paul Schuberth",
   "license": "MIT",
