Run release-please with PAT

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -11,3 +11,4 @@ jobs:
         with:
           release-type: node
           package-name: regex-extract-action
+          token: ${{ secrets.PAT }}
