feat: Add output `has_matches`
Release-As: 1.0.0

--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,8 @@ inputs:
 outputs:
   matches:
     description: 'A JSON list of all found matches.Extraction'
+  has_matches:
+    description: 'Indicates whether any matches were found. Either `true` or `false`'.
 runs:
   using: 'node16'
   main: 'dist/index.js'
