--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -14,3 +14,9 @@ jobs:
           token: ${{ secrets.PAT }}
           extra-files: |
             ./.github/workflows/example.yml
+          changelog-types: >-
+            [
+            {"type":"feat","section":"Features","hidden":false},
+            {"type":"fix","section":"Bug Fixes","hidden":false},
+            {"type":"chore","section":"Miscellaneous","hidden":false}
+            ]
