--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -13,7 +13,7 @@ jobs:
           package-name: regex-extract-action
           token: ${{ secrets.PAT }}
           extra-files: |
-            ./.github/workflows/example.yml
+            .github/workflows/example.yml
           changelog-types: >-
             [
             {"type":"feat","section":"Features","hidden":false},
