--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -12,3 +12,5 @@ jobs:
           release-type: node
           package-name: regex-extract-action
           token: ${{ secrets.PAT }}
+          changelog-types: '[{"type":"feat","section":"Features 🚀","hidden":false},{"type":"fix","section":"Bug Fixes 🐛","hidden":false},{"type":"chore","section":"Miscellaneous 🧹","hidden":false}]'
+
