--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,10 @@ inputs:
     required: false
     default: 'unique'
     description: 'One of `all`, `unique`, `first`.'
+  until:
+    required: false
+    default: ''
+    description: 'Search haystack until first match for `until`'
 outputs:
   matches:
     description: 'A JSON list of all found matches'
