--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^8.39.0",
     "eslint-plugin-github": "^4.7.0",
     "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.0.0",
     "js-yaml": "^4.1.0",
     "prettier": "3.0.0",
