chore: Transfer settings from action to config file

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,7 +6,24 @@
       "bump-minor-pre-major": false,
       "bump-patch-for-minor-pre-major": false,
       "draft": false,
-      "prerelease": false
+      "prerelease": false,
+      "changelog-sections": [
+        {
+          "type": "feat",
+          "section": "Features 🚀",
+          "hidden": false
+        },
+        {
+          "type": "fix",
+          "section": "Bug Fixes 🐛",
+          "hidden": false
+        },
+        {
+          "type": "chore",
+          "section": "Miscellaneous 🧹",
+          "hidden": false
+        }
+      ]
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
