--- a/.github/workflows/update-dist.yml
+++ b/.github/workflows/update-dist.yml
@@ -13,14 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     if: contains(github.event.pull_request.labels.*.name, 'dependencies')
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+      - uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
           token: ${{ github.token }} # Replace github.token with PAT (personal access token) if you need to trigger a new workflow. https://git.io/JcHD9
       - name: Use Node.js v16.x
-        uses: actions/setup-node@v4.0.1
+        uses: actions/setup-node@v4
         with:
-          node-version: 16.x
+          node-version: 20.x
           # It is not suggested to cache for the pull_request_target event
           # https://docs.github.com/en/actions/reference/events-that-trigger-workflows#pull_request_target
       - name: Update the dist directory
