--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vercel/ncc": "^0.38.0",
     "eslint": "^8.0.0",
     "eslint-plugin-github": "^5.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^28.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.0.0",
